# binance-portal-tui

./: Cargo.toml  README.md  config_example.toml
src/: api.rs  app.rs  config.rs  event.rs  main.rs  ui.rs
