[package]
name = "binance-portal-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.0"
crossterm = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
config = "0.14"
dirs = "5.0"
toml = "0.8"
